# arcueid

./: .gitignore  AUTHORS  COPYING  COPYING.ARC  ChangeLog  Makefile.am  NEWS  README  README.EXT  arcueid.org  arcueid.pc  arcueid.pc.in  carc.pc.in  configure.ac  configure.in  coverage.sh
arc/: Makefile  Makefile.am  arc.arc  arcstuff.arc  bootstrap.arc  bootstrap1.arc  bootstrap2.arc  ciel.arc  comp-bsdef.arc  compiler.arc
arc/compiler/: arcstuff.arc  bootstrap.arc  compiler.arc  reader.arc
arc/news/: how-to-run-news  srv.arc
arc/tests/: README  core-errors-continuations-test.arc  core-maths-test.arc  core-typing-test.arc  foundation-test.arc  misc-tests.arc  run-test.sh  spec.arc  test_builtin.arc  test_compiler.arc  unit-test.arc
arc/tests/arcstuff/: quasiquote-test.arc  ssyntax-test.arc  tests.arc
arc/tests/compiler/: compiler-test.arc  reader-test.arc  tests.arc
arc/tests/core/: README  foundation-symbols-test.arc  runtest.arc  tests.arc
doc/: Makefile.am  VIRTUAL_MACHINE.txt  arcueid.texi  carc.texi  version.texi
java/: .project
java/nekoarc/: build.gradle  local.properties  settings.gradle
java/nekoarc/gradle/wrapper/: gradle-wrapper.properties
java/nekoarc/src/main/java/org/arcueidarc/nekoarc/: HeapContinuation.java  InvokeThread.java  Nil.java
java/nekoarc/src/main/java/org/arcueidarc/nekoarc/functions/: Builtin.java  CCC.java
java/nekoarc/src/main/java/org/arcueidarc/nekoarc/types/: Cons.java  Symbol.java  Vector.java
java/nekoarc/src/main/java/org/arcueidarc/nekoarc/util/: CallSync.java  Callable.java  MurmurHash.java
java/nekoarc/src/main/java/org/arcueidarc/nekoarc/vm/: INVALID.java  VirtualMachine.java
java/nekoarc/src/main/java/org/arcueidarc/nekoarc/vm/instruction/: CAR.java  CONSR.java  CONT.java  DIV.java  ENV.java  HLT.java  IS.java  JBND.java  JF.java  LDG.java  LDL.java  NIL.java  RET.java  SCDR.java  STE0.java  STG.java  SUB.java  TRUE.java
java/nekoarc/src/test/java/org/arcueidarc/nekoarc/util/: MurmurHashTest.java
java/nekoarc/src/test/java/org/arcueidarc/nekoarc/vm/: FibonacciTest.java  HeapContinuationTest.java  Java2ArcTest.java  TailRecursionTest.java
java/nekoarc/src/test/java/org/arcueidarc/nekoarc/vm/instruction/: ADDtest.java  APPLYtest.java  CARtest.java  CDRtest.java  CONSRtest.java  CONTtest.java  DCARtest.java  DIVtest.java  HLTtest.java  IStest.java  JMPtest.java  LDItest.java  LDLtest.java  NILtest.java  NOtest.java  (+7 more)
java/src/org/arcueid_arc/nekoarc/: InvalidInstructionException.java  NekoArcException.java  Nil.java  True.java
java/src/org/arcueid_arc/nekoarc/types/: ArcObject.java  Atom.java  Cons.java  Fixnum.java  Flonum.java  Symbol.java
java/src/org/arcueid_arc/nekoarc/util/: IndexPhantomReference.java  LongMap.java  MurmurHash.java
java/src/org/arcueid_arc/nekoarc/vm/: VirtualMachine.java
java/src/org/arcueid_arc/nekoarc/vm/instruction/: ADD.java  APPLY.java  CAR.java  CDR.java  CLS.java  CONS.java  CONSR.java  CONT.java  DCAR.java  DCDR.java  DIV.java  DUP.java  ENV.java  ENVR.java  HLT.java  INVALID.java  IS.java  Instruction.java  JBND.java  JF.java  JMP.java  JT.java  LDE.java  LDE0.java  LDG.java  LDI.java  LDL.java  MENV.java  MUL.java  NIL.java  NOP.java  POP.java  PUSH.java  RET.java  SCAR.java  SCDR.java  SPL.java  STE.java  STE0.java  STG.java  (+2 more)
java/src/org/arcueidarc/nekoarc/: Continuation.java  Env.java  Environment.java  HeapContinuation.java  HeapEnv.java  InvalidInstructionException.java  InvokeThread.java  JavaContinuation.java  NekoArcException.java  Nil.java  True.java  Unbound.java
java/src/org/arcueidarc/nekoarc/functions/: Builtin.java  CCC.java
java/src/org/arcueidarc/nekoarc/functions/arith/: Add.java
java/src/org/arcueidarc/nekoarc/types/: AString.java  ArcObject.java  Atom.java  Closure.java  Cons.java  Fixnum.java  Flonum.java  Numeric.java  Symbol.java  Vector.java
java/src/org/arcueidarc/nekoarc/util/: Callable.java  Caller.java  IndexPhantomReference.java  LongMap.java  ObjectMap.java
java/src/org/arcueidarc/nekoarc/vm/: Instruction.java  VirtualMachine.java
java/src/org/arcueidarc/nekoarc/vm/instruction/: ADD.java  APPLY.java  CAR.java  CDR.java  CLS.java  CONS.java  CONSR.java  CONT.java  DCAR.java  DCDR.java  DIV.java  DUP.java  ENV.java  ENVR.java  HLT.java  INVALID.java  IS.java  Instruction.java  JBND.java  JF.java  JMP.java  JT.java  LDE.java  LDE0.java  LDG.java  LDI.java  LDL.java  MENV.java  MUL.java  NIL.java  NO.java  NOP.java  POP.java  PUSH.java  RET.java  SCAR.java  SCDR.java  SPL.java  STE.java  STE0.java  (+3 more)
java/test/org/arcueid_arc/nekoarc/util/: MurmurHashTest.java
java/test/org/arcueid_arc/nekoarc/vm/: VirtualMachineTest.java
java/test/org/arcueidarc/nekoarc/functions/: CCCtest.java
java/test/org/arcueidarc/nekoarc/vm/: FibonacciTest.java  HeapContinuationTest.java  TailRecursionTest.java  VirtualMachineTest.java
java/test/org/arcueidarc/nekoarc/vm/instruction/: ADDtest.java  APPLYtest.java  CLStest.java  CONStest.java  CONTtest.java  DCARtest.java  DCDRtest.java  ENVRtest.java  ENVtest.java  IStest.java  JBNDtest.java  JFtest.java  JTtest.java  LDE0test.java  LDEtest.java  LDGtest.java  NOPtest.java  RETtest.java  SCARtest.java  STEtest.java
m4/: ac_c_labels_as_values.m4  ax_lib_readline.m4
src/: Makefile.am  alloc.c  alloc.h  arcueid.c  arcueid.h  arcueid.h.in  arcueid.vmg  arith.c  arith.h  builtin.h  builtins.h  carc.c  carc.h  carc.h.in  carcP.h  carcP.h.in  carcvm.vmg  ccode.c  chan.c  ciel.c  clos.c  codegen.c  compiler.c  compiler.h  cons.c  cont.c  coroutine.h  dirops.c  disasm.c  disasm.h  disasmtbl.h  disasmtbl.rb  env.c  err.c  ffi.c  fileio.c  gc.c  gc.h  gopt.c  hash.c  (+42 more)
test/: Makefile.am  arc.arc  check_aff.c  check_alloc.c  check_arc.c  check_arith.c  check_builtins.c  check_ciel.c  check_compiler.c  check_cons.c  check_env.c  check_error.c  check_ffi.c  check_gc.c  check_gc2.c  check_hash.c  check_io.c  check_is_iso.c  check_pp.c  check_reader.c  check_rune.c  check_sio.c  check_string.c  check_symbol.c  check_unicode.c  check_vm.c  check_vmengine.c  code.ciel  rfile.txt  string.ciel  sym.ciel
