# 
# Copyright (C) 2009 Rafael R. Sevilla
#
# This file is part of CArc
#
# CArc is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
#  (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston MA
# 02110-1301 USA.
#
AC_PREREQ(2.61)
AC_INIT([CArc], [0.1.0], [dido@imperium.ph])
AC_CONFIG_SRCDIR([src/alloc.c])

AM_INIT_AUTOMAKE([-Wall -Werror])
AC_CANONICAL_HOST
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC
AC_PROG_LN_S
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AM_PROG_CC_C_O

AC_C_CONST
AC_C_INLINE

AC_HEADER_STDC
AC_CHECK_SIZEOF(void *)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(int)
AC_MSG_CHECKING([that long and void * have the same size])
if test $ac_cv_sizeof_long == $ac_cv_sizeof_void_p
then
   AC_MSG_RESULT(yes)
else
   AC_MSG_RESULT(no)
   echo "******** ERROR **********"
   echo "CArc requires that sizeof(long) and sizeof(void *) be equal to compile"
   exit 1
fi
PKG_CHECK_MODULES([CHECK], [check >= 0.9.4])
AC_CHECK_HEADERS(gmp.h)
AC_CHECK_LIB(gmp, __gmpz_init, GMP_LIBS=-lgmp)
if test "$GMP_LIBS" != ""; then
   MP_HEADER="#include <gmp.h>"
   MP_TYPE="typedef mpq_t bignum_t"
   MP_BVALUE="bignum_t _bignum"
   AC_SUBST(MP_HEADER)
   AC_SUBST(MP_TYPE)
   AC_SUBST(MP_BVALUE)
fi
LIBCARC_LIBS="-L${libdir} -lcarc $GMP_LIBS"
AC_SUBST(LIBCARC_LIBS)
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([carc.pc Makefile src/Makefile test/Makefile src/carc.h])
AC_OUTPUT
